--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>iikiruotoko.github.io</title>
     <link rel="stylesheet" href="styles.css">
 
-    <meta name="description" content="iikiruotokoのWebアプリ一覧">
+    <meta name="description" content="ななまがりWebアプリ">
     <link rel="canonical" href="https://iikiruotoko.github.io/">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="iikiruotoko.github.io">
-    <meta property="og:description" content="iikiruotokoのWebアプリ一覧">
+    <meta property="og:description" content="ななまがりWebアプリ">
     <meta property="og:url" content="https://iikiruotoko.github.io/">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -22,7 +22,7 @@
         "name": "iikiruotoko.github.io",
         "url": "https://iikiruotoko.github.io/",
         "inLanguage": "ja",
-        "description": "iikiruotokoのWebアプリ一覧"
+        "description": "ななまがりWebアプリ"
     }
     </script>
 </head>
