--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>iikiruotoko.github.io</title>
     <link rel="stylesheet" href="styles.css">
 
-    <meta name="description" content="ななまがりWebアプリ">
+    <meta name="description" content="ななまがりAIアプリ">
     <link rel="canonical" href="https://iikiruotoko.github.io/">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="iikiruotoko.github.io">
-    <meta property="og:description" content="ななまがりWebアプリ">
+    <meta property="og:description" content="ななまがりAIアプリ">
     <meta property="og:url" content="https://iikiruotoko.github.io/">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -22,28 +22,28 @@
         "name": "iikiruotoko.github.io",
         "url": "https://iikiruotoko.github.io/",
         "inLanguage": "ja",
-        "description": "ななまがりWebアプリ"
+        "description": "ななまがりAIアプリ"
     }
     </script>
 </head>
 <body>
     <div class="container">
         <div class="main-content">
-            <h1 class="title">ななまがりWebアプリ</h1>
+            <h1 class="title">ななまがりAIアプリ</h1>
             <div class="apps-grid">
                 <a href="https://iikiruotoko.github.io/IikiruOtoko/" class="app-card">
                     <div class="app-icon">
                         <img src="https://iikiruotoko.github.io/IikiruOtoko/images/icon.png" alt="言い切る男" onerror="this.style.display='none'">
                     </div>
                     <h2 class="app-title">言い切る男</h2>
-                    <p class="app-description">その答えを言い切る男が言い切るWebアプリです。</p>
+                    <p class="app-description">その答えを言い切る男が言い切るAIアプリです。</p>
                 </a>
                 <a href="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/" class="app-card">
                     <div class="app-icon">
                         <img src="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/images/icon.png" alt="令和のノリツッコミ" onerror="this.style.display='none'">
                     </div>
                     <h2 class="app-title">令和のノリツッコミ</h2>
-                    <p class="app-description">令和のノリツッコミWebアプリです。</p>
+                    <p class="app-description">令和のノリツッコミAIアプリです。</p>
                 </a>
             </div>
         </div>
