--- a/index.html
+++ b/index.html
@@ -3,47 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iikiruotoko.github.io</title>
+
+    <!-- title, description -->
+    <title>ななまがりAI｜言い切る男AI・令和のノリツッコミAI</title>
+
+    <link rel="icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
+
+    <!-- styles -->
     <link rel="stylesheet" href="styles.css">
 
-    <meta name="description" content="ななまがりAIアプリ">
+    <!-- description -->
+    <meta name="description" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
+
+    <!-- canonical url -->
     <link rel="canonical" href="https://iikiruotoko.github.io/">
 
+    <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="iikiruotoko.github.io">
-    <meta property="og:description" content="ななまがりAIアプリ">
+    <meta property="og:title" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
+    <meta property="og:description" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
     <meta property="og:url" content="https://iikiruotoko.github.io/">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="https://iikiruotoko.github.io/images/og.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://iikiruotoko.github.io/images/og.webp">
+
+    <!-- JSON-LD -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "iikiruotoko.github.io",
+        "@type": "WebApplication",
+        "name": "ななまがりAI",
         "url": "https://iikiruotoko.github.io/",
         "inLanguage": "ja",
-        "description": "ななまがりAIアプリ"
+        "applicationCategory": "EntertainmentApplication",
+        "operatingSystem": "Web",
+        "description": "ななまがりAI｜言い切る男AI・令和のノリツッコミAI"
     }
     </script>
 </head>
 <body>
     <div class="container">
         <div class="main-content">
-            <h1 class="title">ななまがりAIアプリ</h1>
+            <h1 class="title">ななまがりAI</h1>
             <div class="apps-grid">
                 <a href="https://iikiruotoko.github.io/IikiruOtoko/" class="app-card">
                     <div class="app-icon">
-                        <img src="https://iikiruotoko.github.io/IikiruOtoko/images/icon.png" alt="言い切る男" onerror="this.style.display='none'">
+                        <img src="https://iikiruotoko.github.io/IikiruOtoko/favicon.ico" alt="言い切る男" onerror="this.style.display='none'">
                     </div>
                     <h2 class="app-title">言い切る男</h2>
-                    <p class="app-description">その答えを言い切る男が言い切るAIアプリです。</p>
+                    <p class="app-description">その答えを言い切りましょう</p>
                 </a>
                 <a href="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/" class="app-card">
                     <div class="app-icon">
-                        <img src="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/images/icon.png" alt="令和のノリツッコミ" onerror="this.style.display='none'">
+                        <img src="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/favicon.ico" alt="令和のノリツッコミ" onerror="this.style.display='none'">
                     </div>
                     <h2 class="app-title">令和のノリツッコミ</h2>
-                    <p class="app-description">令和のノリツッコミAIアプリです。</p>
+                    <p class="app-description">そうそうそうそう って… そ!</p>
                 </a>
             </div>
         </div>
