--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             <div class="apps-grid">
                 <a href="https://iikiruotoko.github.io/IikiruOtoko/" class="app-card">
                     <div class="app-icon">
-                        <img src="https://iikiruotoko.github.io/IikiruOtoko/favicon.ico" alt="言い切る男" onerror="this.style.display='none'">
+                        <img src="https://iikiruotoko.github.io/IikiruOtoko/favicon.ico" alt="言い切る男AI" onerror="this.style.display='none'">
                     </div>
-                    <h2 class="app-title">言い切る男</h2>
+                    <h2 class="app-title">言い切る男AI</h2>
                     <p class="app-description">その答えを言い切りましょう</p>
                 </a>
                 <a href="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/" class="app-card">
                     <div class="app-icon">
-                        <img src="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/favicon.ico" alt="令和のノリツッコミ" onerror="this.style.display='none'">
+                        <img src="https://iikiruotoko.github.io/ReiwaNoriTsukkomi/favicon.ico" alt="令和のノリツッコミAI" onerror="this.style.display='none'">
                     </div>
-                    <h2 class="app-title">令和のノリツッコミ</h2>
+                    <h2 class="app-title">令和のノリツッコミAI</h2>
                     <p class="app-description">そうそうそうそう って… そ!</p>
                 </a>
             </div>
