google-site-verification

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         "description": "ななまがりAI｜言い切る男AI・令和のノリツッコミAI"
     }
     </script>
+
+    <meta name="google-site-verification" content="L6iFqDUnKt70agYHhrG71XeoLa9BRYaxGTVE6AjpDqI" />
 </head>
 <body>
     <div class="container">
