--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <!-- title, description -->
     <title>ななまがりAI｜言い切る男AI・令和のノリツッコミAI</title>
 
-    <link rel="icon" href="favicon.ico">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico?v=2" sizes="any">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css">
 
     <!-- description -->
-    <meta name="description" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
+    <meta name="description" content="ななまがりAIは「言い切る男AI」「令和のノリツッコミAI」を提供しています。">
 
     <!-- canonical url -->
     <link rel="canonical" href="https://iikiruotoko.github.io/">
@@ -32,15 +32,18 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
-    <meta property="og:description" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
+    <meta property="og:description" content="ななまがりAIは「言い切る男AI」「令和のノリツッコミAI」を提供しています。">
     <meta property="og:url" content="https://iikiruotoko.github.io/">
     <meta property="og:image" content="https://iikiruotoko.github.io/images/og.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://iikiruotoko.github.io/images/og.webp">
+    <meta name="twitter:title" content="ななまがりAI｜言い切る男AI・令和のノリツッコミAI" />
+    <meta name="twitter:description" content="ななまがりAIは「言い切る男AI」「令和のノリツッコミAI」を提供しています。">
 
     <!-- JSON-LD -->
     <script type="application/ld+json">
